[package]
name = "ty"
version = "0.2.0"
edition = "2024"
description = "ty — IPv6 Attack Toolkit 2026 | Rust async engine over C libty"
license = "AGPL-3.0"
authors = ["ty contributors"]
repository = "https://github.com/Alinthropisc/Ty"
keywords = ["ipv6", "network", "security", "pentest", "ndp"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio        = { version = "1",  features = ["full"] }
clap         = { version = "4",  features = ["derive", "color"] }
libc         = "0.2"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"
fastrand           = "2"
futures            = "0.3"
tokio-util         = { version = "0.7", features = ["time"] }

[build-dependencies]
cc = "1"

[[bin]]
name = "ty"
path = "src/main.rs"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
